@@ -1,3 +1,3 @@
 Main-Class: btthud.ui.Thump
-Implementation-Version: Mon Nov  3 23:04:59 PST 2003
+Implementation-Version: Sun Nov  9 20:27:29 PST 2003
 
