@@ -56,8 +56,7 @@ There are lots of keyboard shortcuts in Thump. Here they are:\
 ^	Select mountain terrain\
 &	Select fire terrain\
 \
-<	Reduce brush size\
->	Increase brush size\
+Cmd/Cntrl 1 - 5 Select a brush size\
 \
 0 to 9	Select an elevation\
 \
